# timebox

./: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: README.md  package.json
components/: CurrentTaskHeader.tsx  NewTaskForm.tsx  TaskItem.tsx  TaskProgress.tsx  TaskTree.tsx  TimerDisplay.tsx  TimerEngine.tsx
docs/: DESKTOP.md  STATUS.md
lib/: desktop.ts  seed.ts  time.ts  types.ts
public/: manifest.json
stores/: useTaskStore.ts  useTimerStore.ts
tools/: build-desktop-web.mjs  desktop-update-install.sh  desktop-update.sh
